<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:title="@string/recite"
        android:id="@+id/mSpeech"
        />

    <item
        android:title="@string/edit"
        android:id="@+id/mEntries"
        />
    <item
        android:title="@string/word_click"
        android:id="@+id/mClickWord"
        />
    <item
        android:title="@string/word_mix"
        android:id="@+id/mWordMix"

        />
    <item
        android:title="@string/letters"
        android:id="@+id/mLetters"
        />
    <item
        android:title="@string/start"
        android:id="@+id/mMain"
        android:visible="false"
        />

    <item android:title="@string/exit"
        android:id="@+id/mExit"
        />

</menu>
    <!--  android:visible="false"
    public void ae_menuClick(View view) {
            gc.PopsMenu(view, R.menu);
        }

        <TextView
            android:text="Aufsagen "
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:layout_marginEnd="9dp"
            android:onClick="as_menuClick"
            android:textSize="18sp"
            app:drawableEndCompat="@drawable/ic_menu_white_24dp" />

    -->