<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="130dp"
    android:id="@+id/rlpop"
    android:background="#031133">

    <TextView
        android:id="@+id/tv_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:textColor="#FFC107"
        android:textSize="20sp" />

    <org.apmem.tools.layouts.FlowLayout
        android:id="@+id/acflowLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:gravity="top"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/tv_popup"
        android:orientation="horizontal"
        > <!--
        android:gravity="bottom"
        android:paddingBottom="22dp" .. ok Bottom space
            android:layout_below="@+id/ctvText" -->
        <Button
            android:text="@string/start"
            android:id="@+id/pwMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textColor="#FFC107"
            android:background="@drawable/popbtn"
            />
    <Button
        android:text="@string/word_mix"
        android:id="@+id/pwwordmix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#FFC107"
        android:background="@drawable/popbtn"
        android:visibility="visible" />

    <Button
        android:text="@string/word_click"
        android:id="@+id/pwwordclck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_margin="1dp"
        android:textColor="#FFC107"
        android:background="@drawable/popbtn"
        />

        <com.e.versmix.utils.ShButton
            android:text="@string/speak"
            android:id="@+id/pwspeakclck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textColor="#FFC107"
            android:background="@drawable/popbtn"
            />
        <Button
            android:text="@string/edit"
            android:id="@+id/pwworkclck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textColor="#FFC107"
            android:background="@drawable/popbtn"
            />
        <Button
            android:text="@string/recite"
            android:id="@+id/pwsaylck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textColor="#FFC107"
            android:background="@drawable/popbtn"
            />
        <Button
            android:text="@string/letters"
            android:id="@+id/pwletters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textColor="#FFC107"
            android:background="@drawable/popbtn"
            />
        <Button
            android:text="@string/again"
            android:id="@+id/pwretry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:textColor="#FFC107"
            android:background="@drawable/popbtn"
            />

    </org.apmem.tools.layouts.FlowLayout>


</RelativeLayout>
