<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    android:id="@+id/content"
    android:background="@color/dark_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/matvVersTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="9dp"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"
        android:onClick="matxtClick"

        />

    <TextView
        android:id="@+id/maTopi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="11dp"
        android:gravity="center_horizontal"
        android:onClick="maMenuClick"
        android:text="@string/app_name"
        android:textSize="26sp"
        app:drawableEndCompat="@drawable/baseline_more_vert_36" />


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/matvVersTop"
    >

<RelativeLayout
    android:id="@+id/container"
    android:background="@color/dark_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <CheckBox
        android:id="@+id/cbShowTex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:onClick="maShowTextClick"
        android:layout_marginTop="7dp"
        android:text="@string/show_text" />

    <Button
        android:text="@string/opt"
        android:layout_width="60dp"
        android:id="@+id/ybtspeakObt"
        android:layout_height="50dp"
        android:layout_toEndOf="@+id/cbShowTex"
        android:layout_marginStart="9dp"
        android:onClick="mattsSettingsClick"
        />

    <com.e.versmix.utils.ShButton
        android:text="@string/speak"
        android:layout_width="wrap_content"
        android:id="@+id/sbtSpeak"
        android:layout_toEndOf="@+id/ybtspeakObt"
        android:layout_height="50dp"
        android:layout_marginStart="9dp"
        android:onClick="maspeackClick"
        />

    <TextView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:minHeight="110dp"
        android:id="@+id/matvVersText"
        android:layout_margin="15dp"
        android:layout_below="@+id/sbtSpeak"
        android:textIsSelectable="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        />


    <Button
        android:text="@string/prevData"
        android:id="@+id/sbtprevdat"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/matvVersText"
        android:layout_marginStart="9dp"
        android:layout_toStartOf="@+id/mabtmischdat"
        android:onClick="mabtPrevDataClick"
        android:visibility="visible" />

    <Button
        android:layout_width="60dp"
        android:id="@+id/mabtmischdat"
        android:layout_height="50dp"
        android:layout_below="@+id/matvVersText"
        android:layout_centerHorizontal="true"
        app:drawableEndCompat="@drawable/ic_refresh_white_24dp"
        android:layout_marginStart="9dp"
        android:onClick="mabtMischDataClick"
        />
    <Button
        android:text="@string/nextData"
        android:layout_width="60dp"
        android:id="@+id/sbtnextdat"
        android:layout_height="50dp"
        android:layout_below="@+id/matvVersText"
        android:layout_toEndOf="@+id/mabtmischdat"
        android:layout_marginStart="9dp"
        android:onClick="mabtNextDataClick"
        />

    <!--  new Line   -->
    <Button
        android:text="@string/search"
        android:id="@+id/sbtSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginTop="11dp"
        android:layout_marginStart="11dp"
        android:layout_below="@+id/sbtnextdat"
        android:layout_alignParentStart="true"
        android:onClick="mabtSearchClick"
        />

    <EditText
        android:id="@+id/sedSeek"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/sbtSearch"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/sbtnextdat"
        android:inputType="textMultiLine"
        />

    <Button
        android:text="@string/set"
        android:id="@+id/gbtsetLvers"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:layout_marginTop="11dp"
        android:layout_marginStart="11dp"
        android:layout_below="@+id/sedSeek"
        android:layout_alignParentStart="true"
        android:onClick="gSetLernVersClick"
        />

    <TextView
        android:text="@string/lernvers"
        android:id="@+id/matvLerni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@+id/gbtsetLvers"
        android:onClick="matxtClick"
        android:layout_below="@+id/sedSeek"
        />

    <TextView
        android:id="@+id/matvMerkVers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="matxtClick"
        android:layout_below="@+id/sedSeek"
        android:layout_toEndOf="@+id/matvLerni"
        />

    <Button
        android:text="@string/set"
        android:id="@+id/gbtgetLvers"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:textSize="18sp"
        android:layout_marginTop="11dp"
        android:layout_marginStart="11dp"
        android:layout_below="@+id/sedSeek"
        android:layout_toEndOf="@+id/matvMerkVers"
        android:onClick="gMerk_to_LernVersClick"
        />
    <org.apmem.tools.layouts.FlowLayout
        android:id="@+id/maflowLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_margin="25dp"

        android:layout_below="@+id/gbtgetLvers"
        android:orientation="horizontal"
        > <!--
        android:gravity="bottom" android:gravity="top"
        android:layout_alignParentBottom="true"
        android:paddingBottom="22dp" .. ok Bottom space
            android:layout_below="@+id/ctvText" -->

        <Button
            android:text="@string/word_mix"
            android:id="@+id/pwwordmix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="14sp"
            android:textColor="#FFC107"
            android:onClick="maWordMixClick"
            android:background="@drawable/popbtn"
            android:visibility="visible" />

        <Button
            android:text="@string/word_click_lz"
            android:id="@+id/pwwordclck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#FFC107"
            android:onClick="maWordClick"
            android:background="@drawable/popbtn"
            />

        <Button
            android:text="@string/edit"
            android:id="@+id/pwworkclck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="#FFC107"
            android:onClick="maEditClick"
            android:background="@drawable/popbtn"
            />
        <Button
            android:text="@string/recite"
            android:id="@+id/pwsaylck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="maSpeakRecClick"
            android:textColor="#FFC107"
            android:background="@drawable/popbtn"
            />
        <Button
            android:text="@string/letters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="maLettersClick"
            android:textColor="#FFC107"
            android:background="@drawable/popbtn"
            />



    </org.apmem.tools.layouts.FlowLayout>

    <!--   Bottom Line:   -->
    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvbottomLeft"
        android:layout_below="@+id/maflowLayout"
        android:layout_alignParentStart="true"
        android:onClick="mabtMischDataClick"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="18sp"
        app:drawableEndCompat="@drawable/ic_refresh_white_24dp" />

    <com.e.versmix.utils.HsTextView
        android:text="@string/s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvbottomLefttw"
        android:layout_below="@+id/maflowLayout"
        android:layout_toEndOf="@id/tvbottomLeft"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="maspeackClick"
        android:textSize="18sp"
        />

    <TextView
        android:text="@string/question_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/matvquesti"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="matxtClick"
        android:layout_below="@+id/maflowLayout"
        android:layout_toEndOf="@+id/tvbottomLefttw"
        />

    <TextView
        android:text=""
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/mabottomRight"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:visibility="invisible"
        app:drawableEndCompat="@drawable/ic_menu_white_24dp" />


    <Button
        android:text="@string/welcome"
        android:id="@+id/mabtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13sp"
        android:layout_marginTop="11dp"
        android:layout_marginStart="11dp"
        android:layout_below="@+id/matvquesti"
        android:layout_alignParentStart="true"
        android:onClick="mabtWelcomeClick"
        />
</RelativeLayout>
</ScrollView>
</RelativeLayout>