<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#3E80B4"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/open"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <org.apmem.tools.layouts.FlowLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/flFileList"
            android:orientation="horizontal"> <!-- Vertical Orientation set -->

        </org.apmem.tools.layouts.FlowLayout>

    </ScrollView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#3E80B4"
        android:orientation="horizontal" >



    <EditText
        android:text="Spruch.csv"
        android:id="@+id/edFileName"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="text"

        />


        <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:clickable="true"
        android:text="@string/delete"

        android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:id="@+id/tvDirName"
        android:textSize="11sp"
        />

    <!--   neue Zeile  -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#3E80B4"
        android:orientation="horizontal" >


        <Button
            android:text="@string/yes"
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold" />

        <Button
            android:text="@string/no"
            android:id="@+id/btn_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_gravity="center"
            android:textSize="11sp"
            />

    </LinearLayout>

</LinearLayout>
