<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"

    tools:context=".activ.AyWelcome">

    <TextView
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/dark_background"

        android:id="@+id/wtvwell"
        android:textSize="26sp" />

<ScrollView
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    android:layout_below="@+id/wtvwell"
    android:layout_above="@+id/sbtsimpleHelp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="5dp"
    android:fillViewport="true"
    >

    <TextView
        android:id="@+id/HtmlView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:textSize="16sp" />

</ScrollView>
    <com.e.versmix.utils.ShButton
        android:id="@+id/sbtExi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll"
        android:onClick="wExitClick"
        android:layout_marginStart="18dp"
        android:text="@string/returni"
        android:textSize="12sp"
        app:hideTime="1600"
        />
    <com.e.versmix.utils.ShButton
        android:id="@+id/sbtsimpleHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="wEineFueClick"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/sbtExi"
        android:text="@string/introduction"
        android:textSize="12sp"
        app:hideTime="1600"
        />

</RelativeLayout>