<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/dark_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activ.AyLetters"
    >


    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnWidth="38sp"
        android:numColumns="auto_fit"
        android:stretchMode="spacingWidthUniform"
        android:id="@+id/basiGridView"
        android:padding="0dp"
        android:gravity="start"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="1dp"
        android:scrollingCache="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="35dp"
        />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvbottomLeft"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="alRetryClick"
        android:textSize="18sp"
        app:drawableEndCompat="@drawable/ic_refresh_white_24dp" />

    <com.e.versmix.utils.HsTextView
        android:text="@string/s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvbottomLefttw"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/tvbottomLeft"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:onClick="speackClick"
        android:textSize="18sp"
        />

    <TextView
        android:text="@string/question_mark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/tvFragezeichen"
        android:onClick="letxtClick"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/tvbottomLefttw"
        />

    <TextView
        android:text=""
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/tvFragezeichen"
        android:textSize="18sp" />

    <TextView
        android:text="@string/letters"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:layout_marginEnd="9dp"
        android:onClick="al_menuClick"
        android:textSize="18sp"
        app:drawableEndCompat="@drawable/ic_menu_white_24dp" />

</RelativeLayout>